tests/baselines/reference/functionCall14.errors.txt
==== tests/cases/compiler/functionCall14.ts (2 errors) ====
    function foo(a?:string, ...b:number[]){} 
    foo('foo', 1); 
    foo('foo'); 
    foo();
    foo(1, 'bar');
    ~~~
!!! functionCall14.ts(5,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! functionCall14.ts(5,1): error TS2087: Could not select overload for 'call' expression.
    foo('foo', 1, 3);
    